syntax = "proto3";
package pb;
option go_package = "github.com/mauleyzaola/maupod/src/server/pb";
import "google/protobuf/timestamp.proto";
import "media.proto";

enum Message {
    MESSAGE_ARTWORK_SCAN = 0;
    MESSAGE_AUDIO_SCAN = 1;
    MESSAGE_MEDIA_INFO = 2;
    MESSAGE_MEDIA_UPDATE_ARTWORK = 3;
    MESSAGE_MEDIA_DELETE = 5;
    MESSAGE_TAG_UPDATE = 6;
    MESSAGE_MEDIA_UPDATE = 7;

    MESSAGE_IPC = 100;
    MESSAGE_REST_API_READY = 101;

    // specific to mpv events
    MESSAGE_MPV_EOF_REACHED = 202;
    MESSAGE_MPV_PERCENT_POS = 203;
    MESSAGE_MPV_TIME_POS = 204;
    MESSAGE_MPV_TIME_REMAINING = 205;

    // specific to player events
    MESSAGE_EVENT_ON_TRACK_STARTED = 250;
    MESSAGE_EVENT_ON_TRACK_FINISHED = 251;
    MESSAGE_EVENT_ON_TRACK_PLAY_COUNT_INCREASE = 252;
    MESSAGE_EVENT_ON_TRACK_SKIP_COUNT_INCREASE = 253;
    MESSAGE_EVENT_ON_TRACK_PLAYED = 254;
}

enum IPCCommand {
    IPC_PLAY = 0;
    IPC_PAUSE = 1;
    IPC_LOAD = 2;
    IPC_VOLUME = 3;
}

// these are commands that will be sent from the browser to the websocket server
// websocket should have its own logic to dispatch the NATS message
enum RemoteCommand {
    REMOTE_PLAY = 0;
    REMOTE_PAUSE = 1;
    REMOTE_VOLUME = 2;
}

message ArtworkExtractInput {
    Media media = 1;
    google.protobuf.Timestamp scan_date = 2;
}

message ArtworkUpdateInput {
    Media media = 1;
}

message IPCInput {
    Media media = 1;
    string value =2;
    IPCCommand command = 3;
}

message IPCOutput {
    bool ok = 1;
    string error = 2;
}

message MediaInfoInput {
    string file_name = 1;
    Media media = 2;
}

message MediaInfoOutput {
    Media media = 1;
    Response response = 2;
    google.protobuf.Timestamp last_modified_date = 3;
    string raw = 4;
}

message Response {
    bool ok = 1;
    string error = 2;
}

message ScanDirectoryAudioFilesInput {
    string root = 1;
    google.protobuf.Timestamp scan_date = 2;
    bool force = 3;
}

message TrackStartedInput {
    Media media = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message TrackEndedInput {
    Media media = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message TrackPlayedInput {
    Media media = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message TrackSkippedInput {
    Media media = 1;
    google.protobuf.Timestamp timestamp = 2;
}
